--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 		<!-- Иконка сайта -->
 		<link type="image/png" sizes="16x16" rel="icon" href="../favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.png"> <!-- Для GitHub -->
 		<!-- Гугл шрифты -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
