--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
 		<div class="mobile__menu_container">
 			<div class="mobile__menu_content">
 				<ul> 
-				<li><a href="Pages/bouquets-of-roses.html" class="mobile__menu_menu-first">Букеты из роз</a>
+				<li><a href="#" class="mobile__menu_menu-first">Букеты из роз</a>
 					<ul class="menu-first">
 						<li><a href="#" class="back"></a></li>
 						<li><a href="Pages/bouquets-of-roses.html">Букеты из роз</a></li>
