--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								
 								<ul class="sub-menu__list">
 									<li>
-										<a href="Pages/bouquets-of-roses.html" class="sub-menu__link">Букеты из роз
+										<a href="#" class="sub-menu__link">Букеты из роз
 											<span class="arrow-right"></span>
 										</a>
 										<ul class="sub-menu2__list">
