--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
 				<li><a href="#" class="mobile__menu_menu-first">Букеты из роз</a>
 					<ul class="menu-first">
 						<li><a href="#" class="back"></a></li>
-						<li><a href="#">Букеты из роз</a></li>
+						<li><a href="Pages/bouquets-of-roses.html">Букеты из роз</a></li>
 						<li><a href="#">Белые розы</a></li>
 						<li><a href="#">Красные розы</a></li>
 						<li><a href="#">Длинные розы</a></li>
