--- a/Pages/bouquets-with-fruits.html
+++ b/Pages/bouquets-with-fruits.html
@@ -42,7 +42,7 @@
 								
 								<ul class="sub-menu__list">
 									<li>
-										<a href="bouquets-of-roses.html" class="sub-menu__link">Букеты из роз
+										<a href="#" class="sub-menu__link">Букеты из роз
 											<span class="arrow-right"></span>
 										</a>
 										<ul class="sub-menu2__list">
@@ -680,10 +680,10 @@
 		<div class="mobile__menu_container">
 			<div class="mobile__menu_content">
 				<ul> 
-				<li><a href="bouquets-of-roses.html" class="mobile__menu_menu-first">Букеты из роз</a>
+				<li><a href="#" class="mobile__menu_menu-first">Букеты из роз</a>
 					<ul class="menu-first">
 						<li><a href="#" class="back"></a></li>
-						<li><a href="bouquets-of-roses.html">Букеты из роз</a></li>
+						<li><a href="#">Букеты из роз</a></li><!-- Поставил заглушку проверить будет ли переходить все равно по ссылке -->
 						<li><a href="#">Белые розы</a></li>
 						<li><a href="#">Красные розы</a></li>
 						<li><a href="#">Длинные розы</a></li>
